addedd scaffolding model for offence controller

--- a/Assig1/Views/Offences/Delete.cshtml
+++ b/Assig1/Views/Offences/Delete.cshtml
@@ -1,11 +1,12 @@
 ﻿@model Assig1.Models.Offence
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Delete";
 }
 
-<h1>Details</h1>
+<h1>Delete</h1>
 
+<h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>Offence</h4>
     <hr />
@@ -59,8 +60,10 @@
             @Html.DisplayFor(model => model.Section.SectionId)
         </dd>
     </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model?.OffenceCode">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    
+    <form asp-action="Delete">
+        <input type="hidden" asp-for="OffenceCode" />
+        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <a asp-action="Index">Back to List</a>
+    </form>
 </div>
