--- a/Assig1/Views/Offences/Index.cshtml
+++ b/Assig1/Views/Offences/Index.cshtml
@@ -4,9 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
-<div class="text-dark bg-gradient bg-warning p-2 my-2 border rounded">
-    <h2>Index</h2>
-</div>
+<h1>Index</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -42,39 +40,38 @@
         </tr>
     </thead>
     <tbody>
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Description)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.ExpiationFee)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.AdultLevy)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.CorporateFee)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.TotalFee)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.DemeritPoints)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.SectionCode)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Section.SectionId)
-                </td>
-                <td>
-                    <a asp-action="Edit" asp-route-id="@item.OffenceCode">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.OffenceCode">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.OffenceCode">Delete</a>
-                </td>
-            </tr>
-        }
+@foreach (var item in Model) {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Description)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.ExpiationFee)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.AdultLevy)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.CorporateFee)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.TotalFee)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.DemeritPoints)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.SectionCode)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Section.SectionId)
+            </td>
+            <td>
+                <a asp-action="Edit" asp-route-id="@item.OffenceCode">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.OffenceCode">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.OffenceCode">Delete</a>
+            </td>
+        </tr>
+}
     </tbody>
 </table>
