--- a/Assig1/Views/Offences/Details.cshtml
+++ b/Assig1/Views/Offences/Details.cshtml
@@ -1,66 +1,41 @@
-﻿@model Assig1.Models.Offence
+﻿@model Assig1.ViewModels.OffenceDetailViewModel
 
-@{
-    ViewData["Title"] = "Details";
-}
+<div class="container my-4">
+    <!-- Offence Details Card -->
+    <div class="card mb-4">
+        <div class="card-header bg-primary text-white">
+            <h2>Offence Details</h2>
+        </div>
+        <div class="card-body">
+            <p><strong>Offence Code:</strong> @Model.OffenceCode</p>
+            <p><strong>Description:</strong> @Model.Description</p>
+            <p><strong>Section Code:</strong> @Model.SectionCode</p>
+        </div>
+    </div>
 
-<h1>Details</h1>
-
-<div>
-    <h4>Offence</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Description)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ExpiationFee)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ExpiationFee)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.AdultLevy)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.AdultLevy)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CorporateFee)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CorporateFee)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.TotalFee)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.TotalFee)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DemeritPoints)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DemeritPoints)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.SectionCode)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.SectionCode)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Section)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Section.SectionId)
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model?.OffenceCode">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <!-- Expiation Details Table -->
+    <h3 class="mb-3">Expiation Details</h3>
+    <div class="table-responsive">
+        <table class="table table-striped table-bordered">
+            <thead class="table-dark">
+                <tr>
+                    <th scope="col">Incident Date</th>
+                    <th scope="col">Issue Date</th>
+                    <th scope="col">Total Fee</th>
+                    <th scope="col">Status</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var expiation in Model.Expiations)
+                {
+                    <tr>
+                        <td>@expiation.IncidentStartDate.ToString("yyyy-MM-dd")</td>
+                        <td>@expiation.IssueDate?.ToString("yyyy-MM-dd")</td>
+                        <td>@expiation.TotalFee?.ToString("C")</td>
+                        <td>@expiation.Status</td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
 </div>
